--- a/TODO
+++ b/TODO
@@ -1,19 +1,29 @@
 1. Queue unhandled messages: this may be useful. When the agent is eventually
     created, it gets all the messages. We may however have too many messages
-    accumulated. Perhaps we need some pruning strategy here.
-    It may be not a good idea at all.
+    accumulated. Perhaps we need some pruning strategy here. [NO]
 2. Catch addressing errors and? This is how erlang works. However, it may not
-    be appropriate for Python.
-3. Execute instructions on creation: rather easy to do, inexpensive. Still,
-    may not be what we need now.
+    be appropriate for Python. [CHECK]
 4. Decorators to select what needs to be done if a method is called. E.g.,
     check that is a method meant to be called "from outside".
+4b. Maybe we can create decorators to separate handles from other
+    crap... Remember, if we do a separate inheritance system for handles
+    we have to compute the mro with handles "statically" for efficiency.
+    perhaps...
 5. Do we want that we *must* specifiy the node address when creating it?
     Does this not lead to subtle bugs?: probably fixed. Now we have just
-    hinting.
+    hinting. [PARTLY FIXED] [CHECK]
 6. Devise the interface for something gathering simulation results.
     Probably np.array is the right class to hold the results. Because it is
     very easy to plot/save/whatever.
-7. Find a good way to work both with networkx or other kinds of graphs.
-8. Profile the transitive linking (regardless of how it scales).
-
+7. Profile the transitive linking (regardless of how it scales).
+8. Try to remove the idea of priority.
+9. Introduce synchronous messages.
+10. Introduce the idea of an uninterruptible context that overrides
+    cooperate() and that just marks that it should yield after the
+    context if something happened inside
+11. Introduce the idea of some "network attribute caching" to make
+    things more efficient without continuosly querying the sn
+12. Introduce the idea of operations run on the handle, without
+    having to resort to returning the handle.
+13. Create descriptors for properties that may (or may not) be
+    persistent
