--- a/TODO
+++ b/TODO
@@ -26,3 +26,4 @@
     having to resort to returning the handle.
 13. Create descriptors for properties that may (or may not) be
     persistent
+14. Create GUI!
